layout bug fix

--- a/cloze/resources/pbworks.css
+++ b/cloze/resources/pbworks.css
@@ -53,6 +53,7 @@
   border-radius: 0.25em;
   border: 1px solid #a0a0a0;
   white-space: nowrap;
+  letter-spacing: 1px;
 }
 
 .gap input:focus {
